--- a/index.Rmd
+++ b/index.Rmd
@@ -16,4 +16,4 @@ Emily Hamant: https://github.com/elhamant
 
 Naomi Murray: https://github.com/naomiamurray
 
-![Emily's cat Sprout](C:\Users\emily\Downloads\20201119_213845.jpg)
+![Arbutus Canker](https://www.bpmcdn.com/f/files/sooke/import/2017-04/24440sookeGNG-ArbutusfungusPMar2515.jpg;w=725)
